# cp-mcp

./: .env  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: verify_all_tools.py
src/cp_mcp/: basket.py  cache.py  client.py  compare.py  format.py  intent.py  models.py  render.py  server.py  store_index.py
src/cp_mcp/parsers/: __init__.py  common.py  product.py  search.py  store.py
src/cp_mcp/tools/: __init__.py  basket.py  scraping.py
tests/: test_basket.py  test_client_live.py  test_common.py  test_compare.py  test_format.py  test_intent.py  test_parsers_product.py  test_parsers_search.py  test_smoke.py
tests/fixtures/: product_macbook_air_m4.html  search_macbook.html  store_best_shop_paraguai.html  stores_directory.html
